style.css
*{
    margin:0;
    padding:0;
}

body{
    font-family: 'Roboto Condensed', sans-serif;
    width: 100%;
    height: 100%;
    overflow-x: hidden; 

}

hero h1{
    text-align: center;
}

.logo{
    height: 40px;
    content:url(img/logo.png);
}

.logo-large{
    margin-top: 120px;
    margin-bottom: 50px;
    height: 250px;
    content:url(img/logo.gif);
}


/* Navigation Bar */

.navbar{
    /*background-color: #1f1f1f;*/
    background-color: rgba(0,0,0,0.2);
    font-family: 'Exo', sans-serif;
    margin-top: -66px;
    width:100%;
    transition: ease-out 0.5s;
}

.navbar.scrolled{
    background-color: #333;
    transition: ease-in 0.5s;
}
.navbar-nav li{
    padding-right: 10px;

}

.nav-link:hover{
    color: orange !important;
    transition: ease-in 0.3s;
}

.nav-link{
    color: white !important;
    transition: ease-out 0.3;
}

/* Hero */

.hero-section {
    width:100%;
    height:100vh !important;
    min-height: 700px;
    background:  
        linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
        url('img/headerBG.jpg');
    background-repeat: no-repeat;
    background-position: centerop;
    background-size:cover;
    background-attachment: fixed;
    color:white;
    text-align: center;
    font-family: 'Exo', sans-serif;
    
}
.hero-section h1 {
    font-size: 50px;
    text-transform: uppercase;
    text-shadow:2px 2px #333;
    text-shadow: 3px 3px 20px black;
    letter-spacing: 4px;
}
.hero-section h5 {
    padding-top: 5px;
    text-shadow: 1px 1px 10px black;
}
.hero-section a{
    color: orange;
}
.hero-button{
    padding-top: 5px;
}

.btn-primary{
    background-color: #1f1f1f;
    border: 1px solid orange;
}
.btn-primary:hover{
    background-color: orange;
    border: 1px solid orange;
    transition: ease-in 0.3s;
}

i.down{
    border: solid white;
    border-width: 0 1px 1px 0;
    display: inline-block;
    padding: 12px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transition: ease-out 0.3s;
}

i.down:hover{
    border: solid ;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 12px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transition: ease-in 0.3s;
    
}

/*About sections*/

.about-section{
    width: 70%;
    padding-top: 40px !important;
    color: white;
    padding-bottom: 30px;
}

.about-section-background{
    background-color: #1a1a1a;
}

.education-section{
    padding-top: 20px;
    background:  
    linear-gradient(rgba(201, 201, 201, 0.8),rgba(255, 255, 255, 0.1)),
    url('img/bodyBG2.jpg');
    
    background-repeat: no-repeat;
    background-position: center;
    background-size:cover;
    background-attachment: initial;
    color:black;
}
.education-section h5{
    padding-bottom: 70px;
}

.experience-section{
    padding-top: 40px;
    padding-bottom: 40px;
    background:  
    linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
    url('img/bodyBG.jpg');
   
    background-repeat: no-repeat;
    background-position: center bottom;
    background-size:cover;
    background-attachment: initial;
    color:white;
}

.experience-section i{
    padding-top: 30px ;
}

.uog-icon{
    content:url(img/uog-icon.png);
    height: 120px;
    padding-top: 40px;
}
.muic-icon{
    content:url(img/muic-icon.png);
    height: 120px;
}

hr {
    height: 1px;
    background-color:#555;
    width: 100%;
}
.hr-heading {
    height: 1px;
    background-color:#555;
    margin-top: 0px;
    margin-bottom: 50px;
    width: 30%;
    margin-left:35%;
}

/*Resume section*/

.resume-section{
    background-color:orange;
    padding-top: 20px;
    padding-bottom: 20px;
}

/* Connect */

.fa-github{
    color: black;
}

.fa-linkedin{
    color: #0077b5;
}

.fa-phone{
    color:green
}

.fa-at{
    color:red;
}

.fa-github, .fa-linkedin, .fa-phone, .fa-at{
    color:orange;
    font-size: 25px;
    padding-bottom: 15px;
}

footer{
    background-color: #333;
    padding-top: 30px;
    padding-bottom: 30px;

}

.contacts-text,.contacts-header {
    color: white;
    padding-left: 15px;
    vertical-align: middle;
    font-size:25px;
    font-family: 'Exo', sans-serif;
}

.contacts-text:hover{
    color:orange;
    transition: ease-in 0.2s;
}

.contact-list{
    display: inline-block;
    text-align: left;
    list-style: none;
}

.contact-section hr{
    height: 1px;
    background-color:#555;
    margin-top: 10px;
    margin-bottom: 30px;
    width: 40%;
    margin-left: 30%;
}

